<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.genstar</groupId>
	<artifactId>genstar-core</artifactId>
	<version>1.0.3</version>
	<packaging>bundle</packaging>

 	<properties>
    <maven.test.skip>true</maven.test.skip>
	</properties>

	<dependencies>

		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>

		<!-- git@github.com:hamcrest/hamcrest-junit.git -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-junit</artifactId>
			<version>2.0.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.7</version>
		</dependency>

		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.3</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.9</version>
		</dependency>

		<dependency>
			<groupId>javax.vecmath</groupId>
			<artifactId>vecmath</artifactId>
			<version>1.5.2</version>
		</dependency>
		
		<!-- <dependency>
	    <groupId>com.thoughtworks.xstream</groupId>
	    <artifactId>xstream</artifactId>
	    <version>1.4.9</version>
		</dependency> -->
		
		<!-- for serialization of config files in JSON -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-core</artifactId>
		    <version>2.9.2</version>
		</dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-annotations</artifactId>
		    <version>2.9.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.9.2</version>
		</dependency>
				
	
		<!--  MINIMAL SPATIAL IMPORT -->
		<dependency>
    	<groupId>com.vividsolutions</groupId>
    	<artifactId>jts-core</artifactId>
    	<version>1.14.0</version>
		</dependency>
		<!-- END OF JTS IMPORT -->
		
		<!--  BEGIN OF R -->
		<dependency>
	    <groupId>com.github.yannrichet</groupId>
	    <artifactId>Rsession</artifactId>
		<version>1.8.3</version>
	  </dependency>
	  <!--  END OF R -->
	  
	</dependencies>
	
	 <build>
	 	<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>3.2.0</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
						<Bundle-Version>${project.version}</Bundle-Version>
						<Export-Package>core.*</Export-Package>
					</instructions>
				</configuration>
			</plugin>
		</plugins>
		</build>

	<distributionManagement>
		<repository>
			<id>bintray-anrgenstar-genstar-packages</id>
			<name>anrgenstar-genstar-packages</name>
			<url>https://api.bintray.com/maven/anrgenstar/genstar-packages/genstar-core/;publish=1;override=1</url>
		</repository>
	</distributionManagement>
</project>
